[gd_scene load_steps=8 format=2]

[ext_resource path="res://Font/FetteTrumpDeutsch.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Win Screen/Win Screen.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 2
outline_color = Color( 0.807843, 0.290196, 1, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
outline_size = 2
outline_color = Color( 0.807843, 0.290196, 1, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=5]
resource_name = "Fade In"
tracks/0/type = "value"
tracks/0/path = NodePath("Play Again Button:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Fade Out"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Play Again Button:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Play Again Button:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="Win Screen" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Win Screen" type="Control" parent="."]
visible = false
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Win Screen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 480.0
margin_bottom = 270.0
custom_fonts/font = SubResource( 1 )
text = "Boss Defeated"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play Again Button" type="Button" parent="Win Screen"]
margin_left = 192.0
margin_top = 176.0
margin_right = 288.0
margin_bottom = 208.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Win Screen/Play Again Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.5
margin_top = -10.5
margin_right = 43.5
margin_bottom = 10.5
custom_fonts/font = SubResource( 2 )
text = "Play Again"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Win Screen"]
"anims/Fade In" = SubResource( 5 )
"anims/Fade Out" = SubResource( 3 )
anims/RESET = SubResource( 4 )

[connection signal="button_up" from="Win Screen/Play Again Button" to="." method="_on_Play_Again_Button_button_up"]
[connection signal="mouse_entered" from="Win Screen/Play Again Button" to="." method="_on_Play_Again_Button_mouse_entered"]
[connection signal="mouse_exited" from="Win Screen/Play Again Button" to="." method="_on_Play_Again_Button_mouse_exited"]
[connection signal="mouse_entered" from="Win Screen/Play Again Button/Label" to="." method="_on_Label_mouse_entered"]
